Make the example collapsible

--- a/test/storybook/docs/Testing/Behavior/Extends/examples.mdx
+++ b/test/storybook/docs/Testing/Behavior/Extends/examples.mdx
@@ -98,6 +98,9 @@ export class ClockController implements ReactiveController {
   );
 };
 
-<CodeTabset />
+<details className="example-section" open>
+  <summary className="example-title">Lit Reactive Controller Pattern</summary>
+  <CodeTabset />
+</details>
 
 For background on reactive controllers in Lit, see the official docs: [`lit.dev/docs/composition/controllers/`](https://lit.dev/docs/composition/controllers/).
