--- a/test/storybook/docs/Testing/Behavior/Extends/examples.mdx
+++ b/test/storybook/docs/Testing/Behavior/Extends/examples.mdx
@@ -412,4 +412,4 @@ export class ClockBase {
   <CodeTabset id="stencil-direct" tabs={example3Tabs} />
 </details>
 
-For background on reactive controllers in Lit, see the official docs: [`lit.dev/docs/composition/controllers/`](https://lit.dev/docs/composition/controllers/).
+For background on reactive controllers in Lit, see the official docs: <a href="https://lit.dev/docs/composition/controllers/" target="_blank" rel="noopener noreferrer">lit.dev/docs/composition/controllers/</a>.
